--- a/bandplan-pts-uhf.tex
+++ b/bandplan-pts-uhf.tex
@@ -1,184 +1,184 @@
-\begin{landscape}
-\subsubsection{PTS bandplan för UHF}
-\begin{longtable}{llll}
-	\textbf{Frekvens}  & \textbf{Duplex}    & \textbf{Användning}     & \textbf{Anmärkning}                   \\ \hline
-	\endhead
-	328,6--335,4       &                    & Radionavigering         & För luftfart                          \\
-	328,6--335,4       &                    & Luftfartsradio (ILS)    &                                       \\
-	335,4--386         &                    & Militär användning      &                                       \\
-	336--339           & 357--360           & Landmobil radio         &                                       \\
-	336--339           & 357--360           & SAP/SAB                 & bärbara ljudlänkar                    \\
-	357--360           & 336--339           & Landmobil radio         &                                       \\
-	357--360           & 336--339           & SAP/SAB                 & bärbara ljudlänkar                    \\
-	370--371           & 386--387           & Fast radio              & Svensk kanalplan Smalbandig           \\
-	374--376           & 387--389           & Fast radio              & Svensk kanalplan Smalbandig           \\
-	380--385           & 390--395           & Landmobil radio         & Blocktillstånd Rakel                  \\
-	380--385           & 390--395           & TETRA                   & Blocktillstånd Rakel                  \\
-	386--387           & 370--371           & Fast radio              & Svensk kanalplan Smalbandig           \\
-	387--389           & 374--376           & Fast radio              & Svensk kanalplan Smalbandig           \\
-	389--390           &                    & Militär användning      &                                       \\
-	390--395           & 380--385           & Landmobil radio         & Blocktillstånd Rakel                  \\
-	390--395           & 380--385           & TETRA                   & Blocktillstånd Rakel                  \\
-	395--399,9         &                    & Militär användning      &                                       \\
-	399,9--400,05      &                    & Satellitnavigering      &                                       \\
-	400,05--400,15     &                    & Satellit                & Standardfrekvens och tidssignal       \\
-	400,15--401        &                    & Satellit                & MSS nedlänk ERC/DEC/(99)05            \\
-	400,15--404        &                    & Radiosonder             & Ballongburna sonder                   \\
-	400,15--404        &                    & Meteorologi             &                                       \\
-	401--406           &                    & Medicinska implantat    & Undantag från tillståndsplikt         \\
-	402--403           &                    & Meteorologi             & Via satellit                          \\
-	404--406           &                    & Landmobil radio         &                                       \\
-	406--406,1         &                    & Sjöfartsradio (EPIRB)   & Undantag från tillståndsplikt         \\
-	                   &                    &                         & (COSPAS-SARSAT)                       \\
-	406--406,1         &                    & PLB                     & Undantag från tillståndsplikt         \\
-	                   &                    &                         & (COSPAS-SARSAT)                       \\
-	406,1--410         &                    & Landmobil radio         &                                       \\
-	406,1--410         &                    & PMR                     &                                       \\
-	410--420           & 420--430           & Landmobil radio         &                                       \\
-	410--420           & 420--430           & PMR                     &                                       \\
-	410--420           & 420--430           & TETRA                   &                                       \\
-	420--430           & 410--420           & Landmobil radio         &                                       \\
-	420--430           & 410--420           & PMR                     &                                       \\
-	420--430           & 410--420           & TETRA                   &                                       \\
-	429,4375--429,4625 &                    & Larmöverföring          & Undantag från tillståndsplikt         \\
-	430--432           &                    & Landmobil radio         &                                       \\
-	432	438        &                    & Amatörradio             & Undantag från tillståndsplikt         \\
-	433,05--434,79     &                    & Allmän kortdist.radio   & Undantag från tillståndsplikt         \\
-	                   &                    &                         & 2006/771/EG 2013/752/EU               \\
-	438--439,6875      &                    & Telemetri och radiosty. &                                       \\
-	438--439,6875      &                    & Kortdistansradio (SRD)  &                                       \\
-	439,6875--439,9875 &                    & Telemetri och radiost.  & Undantag från tillståndsplikt         \\
-	440--442           &                    & Landmobil radio         &                                       \\
-	442--444           & 448--450           & Landmobil radio         &                                       \\
-	442--444           & 448--450           & PMR                     &                                       \\
-	443,9875--444,4125 &                    & Telemetri och radiost.  & Undantag från tillståndsplikt         \\
-	444--444,5875      &                    & Landmobil radio         &                                       \\
-	444--444,5875      &                    & Telemetri och radiost.  &                                       \\
-	444,5875--444,9875 &                    & Landmobil radio         & Undantag från tillståndsplikt         \\
-	444,5875--448      &                    & Landmobil radio         &                                       \\
-	444,5875--448      &                    & PMR                     &                                       \\
-	446--446,1         &                    & PMR 446                 & Undantag från tillståndsplikt         \\
-	446,1--446,2       &                    & Landmobil radio         & Undantag från tillståndsplikt         \\
-	                   &                    &                         & Digital PMR ECC/DEC/(05)12            \\
-	448--450           & 442--444           & Landmobil radio         &                                       \\
-	448--450           & 442--444           & PMR                     &                                       \\
-	450--452,5         & 460--462.5         & PMR                     &                                       \\
-	452,5--457,5       & 462.5--467.5       & CDMA 450                & Digitala cellulära system             \\
-	457,5--460         & 467.5--470         & PMR                     &                                       \\
-	457,5125--457,5875 & 467.5125--467.5875 & Kom. ombord fartyg      & 3 kanaler 25 kHz                      \\
-	                   &                    &                         & 5 kanaler 12,5 kHz                    \\
-	460--462,5         & 450--452.5         & PMR                     &                                       \\
-	462,5--467,5       & 452.5--457.5       & CDMA 450                & Digitala cellulära system             \\
-	467,5--470         & 457.5--460         & PMR                     &                                       \\
-	467,5125--467,5875 & 457.5125--457.5875 & Kom. ombord  fartyg     & 3 kanaler 25 kHz                      \\
-	                   &                    &                         & 5 kanaler 12,5 kHz                    \\
-	470--790           &                    & Ljudöverföring          & ERC/REC 70-03, Annex 10 e             \\
-	470--790           &                    & Rundradio (DVB-T)       & Äv. DVB-T2 Band IV/V, k. 21--60,      \\
-	                   &                    &                         & 470-694 MHz tom 31 mars 2020;         \\
-	                   &                    &                         & 694-790 MHz tom 31 mars 2017          \\
-	790--862           &                    & TRA-ECS	Block     & Undantag från tillståndsplikt         \\
-	823--832           &                    & Ljudöverföring          & Undantag från tillståndsplikt         \\
-	862--863           &                    & Övrigt                  &                                       \\
-	863--865           &                    & Allmän kortdistansradio & Undantag från tillståndsplikt         \\
-	863--865           &                    & Ljudöverföring          & Undantag från tillståndsplikt         \\
-	865--868           &                    & RFID                    & Undantag från tillståndsplikt         \\
-	865--868           &                    & Allmän kortdist.radio   & Undantag från tillståndsplikt         \\
-	868--870           &                    & Allmän kortdist.radio   & Undantag från tillståndsplikt         \\
-	868,6--869,7       &                    & Larmöverföring          & Undantag från tillståndsplikt         \\
-	869,2--869,25      &                    & Trygghetslarm           & Undantag från tillståndsplikt         \\
-	870,5375--870,6625 &                    & Telemetri och radiost.  & Undantag från tillståndsplikt         \\
-	871--876           &                    & Kortdistansradio (SRD)  &                                       \\
-	876--880           & 921--925           & GSM-R                   & MobiSIR telefon till bas              \\
-	880--915           & 925--960           & E-GSM                   & Telefon till bas                      \\
-	915--916           &                    & Övrigt                  & Skyddband GSM 900                     \\
-	916--921           &                    & Kortdistansradio (SRD)  &                                       \\
-	921--925           & 876--880           & GSM-R                   & MobiSIR Bas till telefon              \\
-	925--960           & 880--915           & E-GSM                   & Bas till telefon                      \\
-	960--1164          &                    & Luftfart                & Radionavigering                       \\
-	960--1215          &                    & Militär användning      &                                       \\
-	960--1215          &                    & Luftfartsradio (DME)    &                                       \\
-	1026--1034         & 1086--1094         & Radionavigering         & För luftfart                          \\
-	1026--1034         & 1086--1094         & Luftfartsradio (SSR)    &                                       \\
-	1086--1094         & 1026--1034         & Radionavigering         & För luftfart                          \\
-	1086--1094         & 1026--1034         & Luftfartsradio (SSR)    &                                       \\
-	1164--1350         &                    & Radionavigering         & För luftfart                          \\
-	1164--1191,795     &                    & Satellitnavigering      & GPS                                   \\
-	1164--1215         &                    & Satellitnavigering      & GALILEO                               \\
-	1191,795--1215     &                    & Satellitnavigering      & GLONASS                               \\
-	1215--1355         &                    & Radiolokalisering       &                                       \\
-	1215--1237         &                    & Satellitnavigering      & GPS                                   \\
-	1237--1260         &                    & Satellitnavigering      & GLONASS                               \\
-	1240--1300         &                    & Amatörradio             & Undantag från tillståndsplikt         \\
-	1260--1300         &                    & Satellitnavigering      & GALILEO                               \\
-	1300--1375         &                    & Militär användning      &                                       \\
-	1330--1427         &                    & Radioastronomi          & Onsala rymd - observatorium           \\
-	1375--1400         & 1427--1452         & Fast radio              & Kanalplan T/R 13-01                   \\
-	1400--1427         &                    & Satellit                & Jordutforskning via satellit          \\
-	1427--1452         & 1375--1400         & Fast radio              & Kanalplan T/R 13-01                   \\
-	1452--1492         &                    & MFCN                    &                                       \\
-	1492--1544         &                    & Militär användning      &                                       \\
-	1518--1525         &                    & Satellit                & MSS nedlänk                           \\
-	1525--1559         &                    & Satellit                & MSS nedlänk                           \\
-	1544--1545         &                    & Sjöfartsradio           & Nöd- och säkerhetstrafik              \\
-	1545--1559         &                    & Militär användning      &                                       \\
-	1559--1591         &                    & Satellitnavigering      & GALILEO                               \\
-	1563--1587         &                    & Satellitnavigering      & GPS                                   \\
-	1591--1610         &                    & Satellitnavigering      & GLONASS                               \\
-	1610--1613,8       &                    & Satellit                & Jordstationer (mobila sat.system)     \\
-	                   &                    &                         & MSS upplänk                           \\
-	                   &                    &                         & Undantag från tillståndsplikt         \\
-	1610,6--1613,8     &                    & Radioastronomi          & Onsala rymd - observatorium           \\
-	1613,8--1626,5     &                    & Satellit                & Jordstationer (mobila sat.system)     \\
-	                   &                    &                         & MSS upplänk                           \\
-	                   &                    &                         & Undantag från tillståndsplikt         \\
-	1626,5--1645,5     &                    & Satellit                & Jordstationer (mobila sat.system)     \\
-	                   &                    &                         & MSS upplänk                           \\
-	                   &                    &                         & Undantag från tillståndsplikt         \\
-	1645,5--1646,5     &                    & Sjöfartsradio           & Nöd- och säkerhetstrafik              \\
-	                   &                    &                         &                                       \\
-	1646,5--1660,5     &                    & Satellit                & Jordstationer (mobila sat.system)     \\
-	                   &                    &                         & MSS upplänk                           \\
-	                   &                    &                         & Undantag från tillståndsplikt         \\
-	1660--1670         &                    & Radioastronomi          & Onsala rymd - observatorium           \\
-	1668--1670         &                    & Satellit                & Jordstationer (mobila sat.system)     \\
-	                   &                    &                         & MSS upplänk                           \\
-	1670--1675         &                    & Satellit                & Jordstationer (mobila sat.system)     \\
-	                   &                    &                         & MSS upplänk                           \\
-	1675--1710         &                    & Satellit                & Meteorologi via satellit              \\
-	1710--1785         & 1805--1880         & DCS1800                 & Mobiltel. 1800-bandet mobil till bas  \\
-	1718,8--1722,2     &                    & Radioastronomi          & Onsala rymd - observatorium           \\
-	1785--1805         &                    & Ljudöverföring          &                                       \\
-	1805--1880         & 1710--1785         & DCS1800                 & Mobiltel. 1800-bandet bas till mobil  \\
-	1880--1900         &                    & DECT                    & Undantag från tillståndsplikt         \\
-	1900--1920         &                    & UMTS                    & Mobiltel. 2100-bandet TDD             \\
-	1920--1980         & 2110--2170         & UMTS                    & Mobiltel. 2100-bandet mobil till bas  \\
-	1980--2010         &                    & Satellit                & Jordstationer (mobila satellitsystem) \\
-	                   &                    &                         & MSS upplänk Blocktillstånd            \\
-	                   &                    &                         & Undantag från tillståndsplikt         \\
-	2010--2025         &                    & ?                       & Digitala cellulära system             \\
-	2025--2110         &                    & Militär användning      &                                       \\
-	2025--2110         &                    & Rymdfarkostkontroll     & Upplänk Satellit-satellit             \\
-	2110--2170         & 1920--1980         & UMTS                    & Mobiltel. 2100-bandet bas till mobil  \\
-	2170--2200         &                    & Satellit                & MSS nedlänk Blocktillstånd            \\
-	2200--2300         &                    & Militär användning      &                                       \\
-	2200--2290         &                    & Rymdfarkostkontroll     & Nedlänk Satellit-satellit             \\
-	2300--2400         &                    & MFCN                    & ECC/DEC/(14)02                        \\
-	2400--2483,5       &                    & Militär användning      &                                       \\
-	2400--2450         &                    & Amatörradio             & Undantag från tillståndsplikt         \\
-	                   &                    &                         & Max 100 mW                            \\
-	2400--2483,5       &                    & Landmobil radio         &                                       \\
-	2400--2483,5       &                    & Allmän kortdist.radio   & Undantag från tillståndsplikt         \\
-	2400--2483,5       &                    & ISM                     & Mikrovågsugnar, bluetooth, wifi...    \\
-	2400--2483,5       &                    & Radiobestämning         & Undantag från tillståndsplikt         \\
-	2400--2483,5       &                    & Dataöverföring          & WIFI2100-bandet                       \\
-	                   &                    &                         & Undantag från tillståndsplikt         \\
-	2446--2454         &                    & RFID                    & Undantag från tillståndsplikt         \\
-	2483,5--2500       &                    & Medicinska implantat    & Undantag från tillståndsplikt         \\
-	2483,5--2500       &                    & Satellit                & MSS nedlänk                           \\
-	2500--2690         &                    & LTE-2600                & Mobiltelefoni 2600-bandet             \\
-	2655--2690         &                    & Radioastronomi          & Onsala rymd - observatorium           \\
-	2690--2700         &                    & Radioastronomi          & Onsala rymd - observatorium           \\
-	2700--2900         &                    & Radionavigering         & För luftfart                          \\
-	2700--2900         &                    & Radiolokalisering       & 
-\end{longtable}
-\end{landscape}
+%\begin{landscape}
+%\subsubsection{PTS bandplan för UHF}
+%\begin{longtable}{llll}
+%	\textbf{Frekvens}  & \textbf{Duplex}    & \textbf{Användning}     & \textbf{Anmärkning}                   \\ \hline
+%	\endhead
+%	328,6--335,4       &                    & Radionavigering         & För luftfart                          \\
+%	328,6--335,4       &                    & Luftfartsradio (ILS)    &                                       \\
+%	335,4--386         &                    & Militär användning      &                                       \\
+%	336--339           & 357--360           & Landmobil radio         &                                       \\
+%	336--339           & 357--360           & SAP/SAB                 & bärbara ljudlänkar                    \\
+%	357--360           & 336--339           & Landmobil radio         &                                       \\
+%	357--360           & 336--339           & SAP/SAB                 & bärbara ljudlänkar                    \\
+%	370--371           & 386--387           & Fast radio              & Svensk kanalplan Smalbandig           \\
+%	374--376           & 387--389           & Fast radio              & Svensk kanalplan Smalbandig           \\
+%	380--385           & 390--395           & Landmobil radio         & Blocktillstånd Rakel                  \\
+%	380--385           & 390--395           & TETRA                   & Blocktillstånd Rakel                  \\
+%	386--387           & 370--371           & Fast radio              & Svensk kanalplan Smalbandig           \\
+%	387--389           & 374--376           & Fast radio              & Svensk kanalplan Smalbandig           \\
+%	389--390           &                    & Militär användning      &                                       \\
+%	390--395           & 380--385           & Landmobil radio         & Blocktillstånd Rakel                  \\
+%	390--395           & 380--385           & TETRA                   & Blocktillstånd Rakel                  \\
+%	395--399,9         &                    & Militär användning      &                                       \\
+%	399,9--400,05      &                    & Satellitnavigering      &                                       \\
+%	400,05--400,15     &                    & Satellit                & Standardfrekvens och tidssignal       \\
+%	400,15--401        &                    & Satellit                & MSS nedlänk ERC/DEC/(99)05            \\
+%	400,15--404        &                    & Radiosonder             & Ballongburna sonder                   \\
+%	400,15--404        &                    & Meteorologi             &                                       \\
+%	401--406           &                    & Medicinska implantat    & Undantag från tillståndsplikt         \\
+%	402--403           &                    & Meteorologi             & Via satellit                          \\
+%	404--406           &                    & Landmobil radio         &                                       \\
+%	406--406,1         &                    & Sjöfartsradio (EPIRB)   & Undantag från tillståndsplikt         \\
+%	                   &                    &                         & (COSPAS-SARSAT)                       \\
+%	406--406,1         &                    & PLB                     & Undantag från tillståndsplikt         \\
+%	                   &                    &                         & (COSPAS-SARSAT)                       \\
+%	406,1--410         &                    & Landmobil radio         &                                       \\
+%	406,1--410         &                    & PMR                     &                                       \\
+%	410--420           & 420--430           & Landmobil radio         &                                       \\
+%	410--420           & 420--430           & PMR                     &                                       \\
+%	410--420           & 420--430           & TETRA                   &                                       \\
+%	420--430           & 410--420           & Landmobil radio         &                                       \\
+%	420--430           & 410--420           & PMR                     &                                       \\
+%	420--430           & 410--420           & TETRA                   &                                       \\
+%	429,4375--429,4625 &                    & Larmöverföring          & Undantag från tillståndsplikt         \\
+%	430--432           &                    & Landmobil radio         &                                       \\
+%	432	438        &                    & Amatörradio             & Undantag från tillståndsplikt         \\
+%	433,05--434,79     &                    & Allmän kortdist.radio   & Undantag från tillståndsplikt         \\
+%	                   &                    &                         & 2006/771/EG 2013/752/EU               \\
+%	438--439,6875      &                    & Telemetri och radiosty. &                                       \\
+%	438--439,6875      &                    & Kortdistansradio (SRD)  &                                       \\
+%	439,6875--439,9875 &                    & Telemetri och radiost.  & Undantag från tillståndsplikt         \\
+%	440--442           &                    & Landmobil radio         &                                       \\
+%	442--444           & 448--450           & Landmobil radio         &                                       \\
+%	442--444           & 448--450           & PMR                     &                                       \\
+%	443,9875--444,4125 &                    & Telemetri och radiost.  & Undantag från tillståndsplikt         \\
+%	444--444,5875      &                    & Landmobil radio         &                                       \\
+%	444--444,5875      &                    & Telemetri och radiost.  &                                       \\
+%	444,5875--444,9875 &                    & Landmobil radio         & Undantag från tillståndsplikt         \\
+%	444,5875--448      &                    & Landmobil radio         &                                       \\
+%	444,5875--448      &                    & PMR                     &                                       \\
+%	446--446,1         &                    & PMR 446                 & Undantag från tillståndsplikt         \\
+%	446,1--446,2       &                    & Landmobil radio         & Undantag från tillståndsplikt         \\
+%	                   &                    &                         & Digital PMR ECC/DEC/(05)12            \\
+%	448--450           & 442--444           & Landmobil radio         &                                       \\
+%	448--450           & 442--444           & PMR                     &                                       \\
+%	450--452,5         & 460--462.5         & PMR                     &                                       \\
+%	452,5--457,5       & 462.5--467.5       & CDMA 450                & Digitala cellulära system             \\
+%	457,5--460         & 467.5--470         & PMR                     &                                       \\
+%	457,5125--457,5875 & 467.5125--467.5875 & Kom. ombord fartyg      & 3 kanaler 25 kHz                      \\
+%	                   &                    &                         & 5 kanaler 12,5 kHz                    \\
+%	460--462,5         & 450--452.5         & PMR                     &                                       \\
+%	462,5--467,5       & 452.5--457.5       & CDMA 450                & Digitala cellulära system             \\
+%	467,5--470         & 457.5--460         & PMR                     &                                       \\
+%	467,5125--467,5875 & 457.5125--457.5875 & Kom. ombord  fartyg     & 3 kanaler 25 kHz                      \\
+%	                   &                    &                         & 5 kanaler 12,5 kHz                    \\
+%	470--790           &                    & Ljudöverföring          & ERC/REC 70-03, Annex 10 e             \\
+%	470--790           &                    & Rundradio (DVB-T)       & Äv. DVB-T2 Band IV/V, k. 21--60,      \\
+%	                   &                    &                         & 470-694 MHz tom 31 mars 2020;         \\
+%	                   &                    &                         & 694-790 MHz tom 31 mars 2017          \\
+%	790--862           &                    & TRA-ECS	Block     & Undantag från tillståndsplikt         \\
+%	823--832           &                    & Ljudöverföring          & Undantag från tillståndsplikt         \\
+%	862--863           &                    & Övrigt                  &                                       \\
+%	863--865           &                    & Allmän kortdistansradio & Undantag från tillståndsplikt         \\
+%	863--865           &                    & Ljudöverföring          & Undantag från tillståndsplikt         \\
+%	865--868           &                    & RFID                    & Undantag från tillståndsplikt         \\
+%	865--868           &                    & Allmän kortdist.radio   & Undantag från tillståndsplikt         \\
+%	868--870           &                    & Allmän kortdist.radio   & Undantag från tillståndsplikt         \\
+%	868,6--869,7       &                    & Larmöverföring          & Undantag från tillståndsplikt         \\
+%	869,2--869,25      &                    & Trygghetslarm           & Undantag från tillståndsplikt         \\
+%	870,5375--870,6625 &                    & Telemetri och radiost.  & Undantag från tillståndsplikt         \\
+%	871--876           &                    & Kortdistansradio (SRD)  &                                       \\
+%	876--880           & 921--925           & GSM-R                   & MobiSIR telefon till bas              \\
+%	880--915           & 925--960           & E-GSM                   & Telefon till bas                      \\
+%	915--916           &                    & Övrigt                  & Skyddband GSM 900                     \\
+%	916--921           &                    & Kortdistansradio (SRD)  &                                       \\
+%	921--925           & 876--880           & GSM-R                   & MobiSIR Bas till telefon              \\
+%	925--960           & 880--915           & E-GSM                   & Bas till telefon                      \\
+%	960--1164          &                    & Luftfart                & Radionavigering                       \\
+%	960--1215          &                    & Militär användning      &                                       \\
+%	960--1215          &                    & Luftfartsradio (DME)    &                                       \\
+%	1026--1034         & 1086--1094         & Radionavigering         & För luftfart                          \\
+%	1026--1034         & 1086--1094         & Luftfartsradio (SSR)    &                                       \\
+%	1086--1094         & 1026--1034         & Radionavigering         & För luftfart                          \\
+%	1086--1094         & 1026--1034         & Luftfartsradio (SSR)    &                                       \\
+%	1164--1350         &                    & Radionavigering         & För luftfart                          \\
+%	1164--1191,795     &                    & Satellitnavigering      & GPS                                   \\
+%	1164--1215         &                    & Satellitnavigering      & GALILEO                               \\
+%	1191,795--1215     &                    & Satellitnavigering      & GLONASS                               \\
+%	1215--1355         &                    & Radiolokalisering       &                                       \\
+%	1215--1237         &                    & Satellitnavigering      & GPS                                   \\
+%	1237--1260         &                    & Satellitnavigering      & GLONASS                               \\
+%	1240--1300         &                    & Amatörradio             & Undantag från tillståndsplikt         \\
+%	1260--1300         &                    & Satellitnavigering      & GALILEO                               \\
+%	1300--1375         &                    & Militär användning      &                                       \\
+%	1330--1427         &                    & Radioastronomi          & Onsala rymd - observatorium           \\
+%	1375--1400         & 1427--1452         & Fast radio              & Kanalplan T/R 13-01                   \\
+%	1400--1427         &                    & Satellit                & Jordutforskning via satellit          \\
+%	1427--1452         & 1375--1400         & Fast radio              & Kanalplan T/R 13-01                   \\
+%	1452--1492         &                    & MFCN                    &                                       \\
+%	1492--1544         &                    & Militär användning      &                                       \\
+%	1518--1525         &                    & Satellit                & MSS nedlänk                           \\
+%	1525--1559         &                    & Satellit                & MSS nedlänk                           \\
+%	1544--1545         &                    & Sjöfartsradio           & Nöd- och säkerhetstrafik              \\
+%	1545--1559         &                    & Militär användning      &                                       \\
+%	1559--1591         &                    & Satellitnavigering      & GALILEO                               \\
+%	1563--1587         &                    & Satellitnavigering      & GPS                                   \\
+%	1591--1610         &                    & Satellitnavigering      & GLONASS                               \\
+%	1610--1613,8       &                    & Satellit                & Jordstationer (mobila sat.system)     \\
+%	                   &                    &                         & MSS upplänk                           \\
+%	                   &                    &                         & Undantag från tillståndsplikt         \\
+%	1610,6--1613,8     &                    & Radioastronomi          & Onsala rymd - observatorium           \\
+%	1613,8--1626,5     &                    & Satellit                & Jordstationer (mobila sat.system)     \\
+%	                   &                    &                         & MSS upplänk                           \\
+%	                   &                    &                         & Undantag från tillståndsplikt         \\
+%	1626,5--1645,5     &                    & Satellit                & Jordstationer (mobila sat.system)     \\
+%	                   &                    &                         & MSS upplänk                           \\
+%	                   &                    &                         & Undantag från tillståndsplikt         \\
+%	1645,5--1646,5     &                    & Sjöfartsradio           & Nöd- och säkerhetstrafik              \\
+%	                   &                    &                         &                                       \\
+%	1646,5--1660,5     &                    & Satellit                & Jordstationer (mobila sat.system)     \\
+%	                   &                    &                         & MSS upplänk                           \\
+%	                   &                    &                         & Undantag från tillståndsplikt         \\
+%	1660--1670         &                    & Radioastronomi          & Onsala rymd - observatorium           \\
+%	1668--1670         &                    & Satellit                & Jordstationer (mobila sat.system)     \\
+%	                   &                    &                         & MSS upplänk                           \\
+%	1670--1675         &                    & Satellit                & Jordstationer (mobila sat.system)     \\
+%	                   &                    &                         & MSS upplänk                           \\
+%	1675--1710         &                    & Satellit                & Meteorologi via satellit              \\
+%	1710--1785         & 1805--1880         & DCS1800                 & Mobiltel. 1800-bandet mobil till bas  \\
+%	1718,8--1722,2     &                    & Radioastronomi          & Onsala rymd - observatorium           \\
+%	1785--1805         &                    & Ljudöverföring          &                                       \\
+%	1805--1880         & 1710--1785         & DCS1800                 & Mobiltel. 1800-bandet bas till mobil  \\
+%	1880--1900         &                    & DECT                    & Undantag från tillståndsplikt         \\
+%	1900--1920         &                    & UMTS                    & Mobiltel. 2100-bandet TDD             \\
+%	1920--1980         & 2110--2170         & UMTS                    & Mobiltel. 2100-bandet mobil till bas  \\
+%	1980--2010         &                    & Satellit                & Jordstationer (mobila satellitsystem) \\
+%	                   &                    &                         & MSS upplänk Blocktillstånd            \\
+%	                   &                    &                         & Undantag från tillståndsplikt         \\
+%	2010--2025         &                    & ?                       & Digitala cellulära system             \\
+%	2025--2110         &                    & Militär användning      &                                       \\
+%	2025--2110         &                    & Rymdfarkostkontroll     & Upplänk Satellit-satellit             \\
+%	2110--2170         & 1920--1980         & UMTS                    & Mobiltel. 2100-bandet bas till mobil  \\
+%	2170--2200         &                    & Satellit                & MSS nedlänk Blocktillstånd            \\
+%	2200--2300         &                    & Militär användning      &                                       \\
+%	2200--2290         &                    & Rymdfarkostkontroll     & Nedlänk Satellit-satellit             \\
+%	2300--2400         &                    & MFCN                    & ECC/DEC/(14)02                        \\
+%	2400--2483,5       &                    & Militär användning      &                                       \\
+%	2400--2450         &                    & Amatörradio             & Undantag från tillståndsplikt         \\
+%	                   &                    &                         & Max 100 mW                            \\
+%	2400--2483,5       &                    & Landmobil radio         &                                       \\
+%	2400--2483,5       &                    & Allmän kortdist.radio   & Undantag från tillståndsplikt         \\
+%	2400--2483,5       &                    & ISM                     & Mikrovågsugnar, bluetooth, wifi...    \\
+%	2400--2483,5       &                    & Radiobestämning         & Undantag från tillståndsplikt         \\
+%	2400--2483,5       &                    & Dataöverföring          & WIFI2100-bandet                       \\
+%	                   &                    &                         & Undantag från tillståndsplikt         \\
+%	2446--2454         &                    & RFID                    & Undantag från tillståndsplikt         \\
+%	2483,5--2500       &                    & Medicinska implantat    & Undantag från tillståndsplikt         \\
+%	2483,5--2500       &                    & Satellit                & MSS nedlänk                           \\
+%	2500--2690         &                    & LTE-2600                & Mobiltelefoni 2600-bandet             \\
+%	2655--2690         &                    & Radioastronomi          & Onsala rymd - observatorium           \\
+%	2690--2700         &                    & Radioastronomi          & Onsala rymd - observatorium           \\
+%	2700--2900         &                    & Radionavigering         & För luftfart                          \\
+%	2700--2900         &                    & Radiolokalisering       & 
+%\end{longtable}
+%\end{landscape}
