--- a/egenskaper-hf.tex
+++ b/egenskaper-hf.tex
@@ -1,13 +1,13 @@
-\subsection{Egenskaper hos olika HF-band}
-
-\subsubsection{160 m}
-
-Benämningar: 2 MHz, top band, gränsvåg, övre MF.
-
-Med frekvenser mellan 1 800--2 000 kHz får vi våglängder mellan 167--150 meter. Det är skrymmande att bygga fullstora antenner för bandet och för att få bra utbredning mot horisonden för att köra DX behöver de egentligen placeras väldigt högt upp i luften. Det är det mycket få som kan göra så antennerna hänger i regel lågt i förhållande till våglängden. 
-
-Bandet är ett riktigt bra band för NVIS inom skandinavien dagtid och på kvällstid kan man få långväga kontakter också. Bandet ligger inom de frekvenser som marinen benämner ``gränsvåg'' och tillhör den övre delen av MF-bandet (mellanvågen).  Särskilt på vintern kan bandet få fart och det går att etablera kontakter tusentals av kilometer bort. Bandet drabbas hårt av störningar från modern elektronik, urladdningar i atmosfären som t.ex. åska både nära och fjärran.
-
-Bandet har en del intressanta skipmoder, exempelvis kan det skippa utan markkontakt mellan två lager i jonosfären. Det finns också en hel del märkliga fenomen i bandet och när det inte är några störningar i närheten så kan man höra riktigt avlägsna signaler mycket tydligt.
-
-Solfläckar påverkar 160 m i stor omfattning, likaså aurora brukar kunna effektivt stoppa kommunikation i bandet.
+%\subsection{Egenskaper hos olika HF-band}
+%
+%\subsubsection{160 m}
+%
+%Benämningar: 2 MHz, top band, gränsvåg, övre MF.
+%
+%Med frekvenser mellan 1 800--2 000 kHz får vi våglängder mellan 167--150 meter. Det är skrymmande att bygga fullstora antenner för bandet och för att få bra utbredning mot horisonden för att köra DX behöver de egentligen placeras väldigt högt upp i luften. Det är det mycket få som kan göra så antennerna hänger i regel lågt i förhållande till våglängden. 
+%
+%Bandet är ett riktigt bra band för NVIS inom skandinavien dagtid och på kvällstid kan man få långväga kontakter också. Bandet ligger inom de frekvenser som marinen benämner ``gränsvåg'' och tillhör den övre delen av MF-bandet (mellanvågen).  Särskilt på vintern kan bandet få fart och det går att etablera kontakter tusentals av kilometer bort. Bandet drabbas hårt av störningar från modern elektronik, urladdningar i atmosfären som t.ex. åska både nära och fjärran.
+%
+%Bandet har en del intressanta skipmoder, exempelvis kan det skippa utan markkontakt mellan två lager i jonosfären. Det finns också en hel del märkliga fenomen i bandet och när det inte är några störningar i närheten så kan man höra riktigt avlägsna signaler mycket tydligt.
+%
+%Solfläckar påverkar 160 m i stor omfattning, likaså aurora brukar kunna effektivt stoppa kommunikation i bandet.
