--- a/repeatrar-vhf.tex
+++ b/repeatrar-vhf.tex
@@ -1,4 +1,5 @@
 \begin{landscape}
+
 \subsection{Repeatrar, länkar och fyrar VHF/UHF}
 \subsubsection{Svenska fyrar VHF/UHF}
 \begin{longtable}{rlrllrrrc}
@@ -570,4 +571,6 @@ Repeater & D-Star & SK7HW-B  & Växjö               & 434.7000  & -2MHz   & DV 
 \normalsize
 
 \end{landscape}
+
+\clearpage
 
