--- a/init-full.tex
+++ b/init-full.tex
@@ -1,17 +1,16 @@
-\begin{document}
-\title{Radiohandbok för Amatörradio}
-\author{SM0UEI}
-\maketitle
+\section*{Förord}
 
-Handbok för radiooperatörer innehåller diverse matnyttig information för ama\-tör\-radio\-oper\-atör\-er i Sverige. Tanken är att samla information som t.ex. är bra att ha på resande fot eller annars som man saknar när man behöver den och inte har tillgång till Internet.
+Det du nu håller i din hand eller läser på din skärm är resultatet av en omarbetning av den tidigare radiohandboken. Denna version kommer sig av att det var dags att uppdatera layouten och även passa på att städa upp lite i boken så att den blev lite mer strukturerad.
 
-Skriv ut den på A4 med två sidor på samma papper och vik ihop till ett häfte. Ladda ner den i läsplattan eller surfplattan. Papperstypen är vald som A5 för att underlätta läsning på platta och mobiltelefon till och med.
+De tidigare versionerna särskilt tänkta att läsas på platta, ebokläsare eller mobil har utgått. Detta för att de inte var särskilt populära eller ofta nedladdade liksom att det tar en del tid i anspråk att underhålla flera olikva versioner av samma material. Eftersom sidstorleken för läs- och surfplattor är bäst som A5 ungefär innebär det också en del problem med layout.
 
-Idéer tankar, korrigeringar och annat som behöver vara med är väl\-kom\-met att du skickar till anders@sikvall.se så kan jag se till att få med det i nästa utgåva. Denna bok uppdateras sporadiskt när det finns skäl och tid till detta.
+Hur som helst hoppas jag att ni ska tycka att denna version innehåller mycket matnyttigt. Som vanligt är det bara att maila era synpunkter till anders@sikvall.se så kan vi se om vi kan uppdatera dessa till kommande versioner.
+
+Bidrag till boken tas tacksamt mot men jag kommer bedöma ifall materialet är lämpligt att ta med. I denna utgåva har även PTS bandplaner bedömts som överflödigt material eftersom vi ändå uppnått ganska många sidor med det viktigaste materialet. PTS bandplan återfinns ändå på deras hemsida.
+
+Och kör radio där ute. Mobilt. Stabilt. Med stil.\\[4em]
+
+Stockholm, \today\\
+\italics{Täpp-Anders Sikvall}
 
 \clearpage
-\tableofcontents
-\clearpage
-
-\setlength{\parskip}{0.5em}
-\setlength{\parindent}{0pt}
